--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -79,5 +79,6 @@
     "param.formtitle": "Parameters",
     "param.form_aria": "Application parameters",
     "param.focuspolicy": "Set focus on navigate",
-    "param.general.section": "General parameters"
+    "param.general.section": "General parameters",
+    "param.accesibility.section":"Accessibility parameters"
 }
