--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -30,7 +30,7 @@
     "transport.renderstation": "Dessiner les stations",
     "transport.search": "Rechercher",
     "transport.search.shortcut": "R",
-    "transport.sectionplan": "Affichage des lignes de transports",
+    "transport.sectionplan": "Paramètres d'affichage des lignes de transports",
     "transport.strategyways": "Données de tracé OSM",
     "transport.strategywayscorreted": "Données OSM corrigées",
     "transport.strategystation": "Position des stations",
@@ -59,8 +59,8 @@
     "transport.sectiondata": "Exploitation des données de carte",
     "transport.sectionline": "Sélection des lignes de transport",
     "citymap.extractposition":"Position de la zone de carte à extraire",
-    "citymap.sectionplan": "Construction de plan",
-    "citymap.rendermap": "Extraction de la zone de carte",
+    "citymap.sectionplan": "Paramètres d'affichage de la carte",
+    "citymap.rendermap": "Dessiner l'extrait de carte",
     "citymap.building": "Inclure les immeubles",
     "citymap.streetpolygon": "Polygones pour les routes et chemins",
     "citymap.footpathonly": "Pieton seulement",
