--- a/docs/locale/en/LC_MESSAGES/licence.po
+++ b/docs/locale/en/LC_MESSAGES/licence.po
@@ -22,13 +22,18 @@ msgstr ""
 
 #: ../../licence.md:1
 msgid "License d'utilisation"
-msgstr ""
+msgstr "End user licence"
 
 #: ../../licence.md:3
 msgid ""
 "OpenStreetTouch est un logiciel libre distribué sous licence GPL V3. Vous"
 " trouverez le texte complet de cette license dans le fichier `LICENSE` du"
 " projet sur Github : "
-"[https://github.com/braillerap/DesktopBrailleRAP/blob/main/LICENSE](https://github.com/braillerap/DesktopBrailleRAP/blob/main/LICENSE)"
+"[https://github.com/braillerap/OpenStreetTouch/blob/main/LICENSE](https://github.com/braillerap/OpenStreetTouch/blob/main/LICENSE)"
 msgstr ""
+"OpenStreetTouch is a free software distributed under the GPL V3 license. "
+"You can find the full text of this license in the `LICENSE` file of the "
+"project on Github: "
+"[https://github.com/braillerap/OpenStreetTouch/blob/main/LICENSE](https://github.com/braillerap/OpenStreetTouch/blob/main/LICENSE)"
+
 
